# Ora

./: Cargo.toml  README.md  ROADMAP.md  Taskfile.yaml  cliff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml  security.yml
ROADMAP/: ARCHITECTURE.md  COMPLETED.md  DOCUMENTATION.md  FEATURES.md  OFFLINE.md  README.md  SECURITY.md  TESTING.md
docs/: CREATING_REPO_FILES.md  GETTING_STARTED.md  QUICK_START_REPO.md  REPO_SCHEMA.md  SECURITY_CONFIGURATION.md
docs/contributing/: dependencies.md  roadmap.md
docs/user/: getting-started.md
examples/: README.md  simple-tool.repo
examples/registry/: README.md
examples/self-update/: ora.repo
ora-registry/: ora.repo  rite.repo  velt.repo
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs
src/config/: global.rs  installed.rs  local_metadata.rs  migrations.rs  mod.rs  repo.rs  security_config.rs  security_limits.rs
src/installer/: deployer.rs  downloader.rs  extractor.rs  mod.rs  post_install.rs  verifier.rs
src/providers/: custom_api.rs  direct_url.rs  discovery.rs  github.rs  gitlab.rs  mod.rs  traits.rs  webpage_scraping.rs
src/registry/: index.rs  manager.rs  mod.rs  sync.rs
src/security/: audit.rs  checksum.rs  git.rs  gpg.rs  mod.rs  tls.rs  warnings.rs
src/storage/: cache.rs  database.rs  mod.rs  paths.rs
src/utils/: http.rs  io_errors.rs  mod.rs  platform.rs  regex.rs  templating.rs  (+1 more)
tests/: README.md  e2e_advanced_test.sh  e2e_test.sh  integration_install.rs  integration_registry.rs  integration_uninstall.rs  integration_update.rs  run_all_e2e.sh
(+28 files in other folders)
